--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -33,6 +33,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    .text {
+      font-family: 'Raleway', sans-serif;
+      font-size: 34px;
+      .highlight {
+        font-weight: 700;
+        color: #e31b6d;
+      }
+    }
   }
 
   &__title {
